log
Thu 05 Oct 2023 03:28:54 AM UTC: 
 tests:  0|5
total_score: 0/70
092af31
Thu 05 Oct 2023 04:33:23 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:9: error: implicit declaration of function ‘addNodeToList’ [-Werror=implicit-function-declaration]
   58 |         addNodeToList(list, new_node);
      |         ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
03a3f89
Thu 05 Oct 2023 04:38:53 PM UTC: 
 sudoku.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘addNodeToList’:
sudoku.c:53:11: error: ‘new_node’ undeclared (first use in this function)
   53 |     node* new_node = (node*)malloc(sizeof(node));
      |           ^~~~~~~~
sudoku.c:53:11: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:53:28: error: expected expression before ‘)’ token
   53 |     node* new_node = (node*)malloc(sizeof(node));
      |                            ^
sudoku.c:62:13: error: invalid use of incomplete typedef ‘List’
   62 |     if (list->size == 0) {
      |             ^~
sudoku.c:63:13: error: invalid use of incomplete typedef ‘List’
   63 |         list->first = new_node;
      |             ^~
sudoku.c:64:13: error: invalid use of incomplete typedef ‘List’
   64 |         list->last = new_node;
      |             ^~
sudoku.c:65:13: error: invalid use of incomplete typedef ‘List’
   65 |         list->current = new_node;
      |             ^~
sudoku.c:67:13: error: invalid use of incomplete typedef ‘List’
   67 |         list->last->next = new_node;
      |             ^~
sudoku.c:68:30: error: invalid use of incomplete typedef ‘List’
   68 |         new_node->prev = list->last;
      |                              ^~
sudoku.c:69:13: error: invalid use of incomplete typedef ‘List’
   69 |         list->last = new_node;
      |             ^~
sudoku.c:72:9: error: invalid use of incomplete typedef ‘List’
   72 |     list->size++;
      |         ^~
Compilation failed
4ff8c52
Thu 05 Oct 2023 04:39:16 PM UTC: 
 sudoku.c | 23 -----------------------
 1 file changed, 23 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:9: error: implicit declaration of function ‘addNodeToList’ [-Werror=implicit-function-declaration]
   59 |         addNodeToList(list, new_node);
      |         ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2ad1168
Thu 05 Oct 2023 04:39:52 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0999449
Thu 05 Oct 2023 04:40:43 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
9151414
Thu 05 Oct 2023 04:43:57 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
e192a70
Thu 05 Oct 2023 04:46:52 PM UTC: 
 sudoku.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
f26e547
Thu 05 Oct 2023 04:47:49 PM UTC: 
 sudoku.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:24: error: ‘listNode’ undeclared (first use in this function)
   60 |         pushBack(list, listNode);
      |                        ^~~~~~~~
sudoku.c:60:24: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
6765ccd
Thu 05 Oct 2023 04:47:59 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
8313ff5
Thu 05 Oct 2023 04:51:58 PM UTC: 
 sudoku.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 5/70
be5bcf1
Thu 05 Oct 2023 04:53:28 PM UTC: 
 sudoku.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:79:9: error: unknown type name ‘node’; did you mean ‘Node’?
   79 |         node* list_node = _createNode(new_node);
      |         ^~~~
      |         Node
sudoku.c:79:27: error: implicit declaration of function ‘_createNode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   79 |         node* list_node = _createNode(new_node);
      |                           ^~~~~~~~~~~
      |                           createNode
sudoku.c:79:27: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
9d7394f
Thu 05 Oct 2023 04:53:53 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
466d65a
Thu 05 Oct 2023 04:54:22 PM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:80:24: error: ‘list_node’ undeclared (first use in this function); did you mean ‘print_node’?
   80 |         pushBack(list, list_node);
      |                        ^~~~~~~~~
      |                        print_node
sudoku.c:80:24: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a0e7502
Thu 05 Oct 2023 04:54:48 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
43b2520
Thu 05 Oct 2023 04:55:31 PM UTC: 
 sudoku.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
b4fbb2e
Thu 05 Oct 2023 04:56:14 PM UTC: 
 sudoku.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
 tests:  2|4
total_score: 15/70
cc4f827
Thu 05 Oct 2023 04:58:35 PM UTC: 
 sudoku.c | 54 +++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 53 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
32d8b43
Mon 09 Oct 2023 02:58:44 AM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
3dd1341
Mon 09 Oct 2023 03:01:49 AM UTC: 
 sudoku.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:148:9: error: implicit declaration of function ‘print_sudo’; did you mean ‘print_node’? [-Werror=implicit-function-declaration]
  148 |         print_sudo(initial->sudo);  // Suponiendo que tienes una función para imprimir la matriz
      |         ^~~~~~~~~~
      |         print_node
sudoku.c:157:38: error: invalid use of incomplete typedef ‘List’
  157 |         for (int i = 0; i < adj_nodes->size; i++) {
      |                                      ^~
sudoku.c:158:13: error: unknown type name ‘node’; did you mean ‘Node’?
  158 |             node* adj_node = adj_nodes->nodes[i]->data;
      |             ^~~~
      |             Node
sudoku.c:158:39: error: invalid use of incomplete typedef ‘List’
  158 |             node* adj_node = adj_nodes->nodes[i]->data;
      |                                       ^~
sudoku.c:159:32: error: passing argument 1 of ‘DFS’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  159 |             Node* result = DFS(adj_node, cont);
      |                                ^~~~~~~~
      |                                |
      |                                int *
sudoku.c:144:17: note: expected ‘Node *’ but argument is of type ‘int *’
  144 | Node* DFS(Node* initial, int* cont){
      |           ~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
278423d
